--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,24 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <!-- Meta Tags -->
     <title>{{ title or metadata.title }}</title>
     <meta name="description" content="{{ metaDescription or metadata.description }}">
-
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/fav.png">
-
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="/assets/css/plugins/fontawesome-6.css">
     <link rel="stylesheet" href="/assets/css/plugins/swiper.css">
     <link rel="stylesheet" href="/assets/css/plugins/unicons.css">
     <link rel="stylesheet" href="/assets/css/plugins/metismenu.css">
     <link rel="stylesheet" href="/assets/css/vendor/animate.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/assets/css/vendor/bootstrap.min.css">
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
@@ -37,15 +32,21 @@
     <!-- Footer Area -->
     {% include "components/footer.njk" %}
 
-    <!-- All JS Files -->
-    <!-- jQuery -->
-    <script src="/assets/js/vendor/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="/assets/js/vendor/bootstrap.min.js"></script>
-    <!-- Plugins -->
+    <!-- jquery js -->
+    <script src="/assets/js/plugins/jquery.min.js"></script>
+    <script src="/assets/js/vendor/jqueryui.js"></script>
+    <script src="/assets/js/plugins/counter-up.js"></script>
     <script src="/assets/js/plugins/swiper.js"></script>
     <script src="/assets/js/plugins/metismenu.js"></script>
-    <script src="/assets/js/plugins/wow.js"></script>
+    <script src="/assets/js/vendor/waypoint.js"></script>
+    <script src="/assets/js/vendor/waw.js"></script>
+    <script src="/assets/js/plugins/gsap.min.js"></script>
+    <script src="/assets/js/plugins/scrolltigger.js"></script>
+    <script src="/assets/js/vendor/split-text.js"></script>
+    <script src="/assets/js/vendor/contact.form.js"></script>
+    <script src="/assets/js/vendor/split-type.js"></script>
+    <script src="/assets/js/plugins/jquery-timepicker.js"></script>
+    <script src="/assets/js/plugins/bootstrap.min.js"></script>
     <!-- Main JS -->
     <script src="/assets/js/main.js"></script>
 </body>
