--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -20,7 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-<body>
+<body class="index-two onepage">
     <!-- Header Area -->
     {% include "components/header.njk" %}
 
