--- a/_includes/components/pages/home/body.njk
+++ b/_includes/components/pages/home/body.njk
@@ -11,9 +11,6 @@
 {% include "components/pages/home/services.njk" %}
 
 <!-- Case Studies Section -->
-{% include "components/pages/home/caseStudies.njk" %}
-
-<!-- Working Process Section -->
 {% include "components/pages/home/workingProcess.njk" %}
 
 <!-- FAQ Section -->
@@ -23,10 +20,10 @@
 {% include "components/pages/home/cta.njk" %}
 
 <!-- Testimonials Section -->
-{% include "components/pages/home/testimonials.njk" %}
+{# include "components/pages/home/testimonials.njk" #}
 
 <!-- Blog Section -->
-{% include "components/pages/home/blog.njk" %}
+{# include "components/pages/home/blog.njk" #}
 
 <!-- Partners Section -->
 {% include "components/pages/home/partners.njk" %}
