--- a/_includes/components/pages/home/workingProcess.njk
+++ b/_includes/components/pages/home/workingProcess.njk
@@ -1,5 +1,6 @@
-    <!-- our working proces area start -->
-    <div class="our-working-process-start rts-section-gap">
+
+    <!-- rts case studies area start -->
+    <div class="rts-case-studyes rts-section-gapBottom bg-white">
         <span class="stok-bg images-r">
             Work Process
         </span>
@@ -7,63 +8,165 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-area-center">
-                        <p class="pre  skew-up">
-                            <span> Our</span> Working Process
+                        <p class="pre skew-up">
+                            <span>Our</span> Working Process
                         </p>
-                        <h2 class="title  skew-up">
-                            Wind Solar Energy work <br>
+                        <h2 class="title skew-up">
                             Project Planning
                         </h2>
                     </div>
                 </div>
             </div>
-            <div class="row g-24 mt--20">
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <!-- single solari steps area staert -->
-                    <div class="single-solari-steps-start">
-                        <div class="thumbnail">
-                            <img src="assets/images/steps/01.png" alt="steps">
-                            <div class="steps">
-                                <span>02</span>
+        </div>
+        <div class="container-full mt--45">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="air-condition-swiper-wrapper">
+                        <div class="swiper mySwiper-h-2-c">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/12.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/24.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/25.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/26.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/12.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/24.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/25.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
+                                <div class="swiper-slide">
+                                    <!-- single case air condition start-->
+                                    <div class="single-case-ac">
+                                        <a href="project-details.html" class="thumbnail">
+                                            <img src="assets/images/project/26.jpg" alt="air-condition">
+                                        </a>
+                                        <div class="inner-content">
+                                            <div class="inner">
+                                                <span class="pre">CHALLENGE</span>
+                                                <a href="project-details.html">
+                                                    <h5 class="title">Official Cleaning Service</h5>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- single case air condition end -->
+                                </div>
                             </div>
+                            <div class="swiper-pagination-h2-c"></div>
                         </div>
-                        <div class="content">
-                            <h5 class="title">Project Planning</h5>
-                        </div>
+
                     </div>
-                    <!-- single solari steps area end -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <!-- single solari steps area staert -->
-                    <div class="single-solari-steps-start">
-                        <div class="thumbnail">
-                            <img src="assets/images/steps/02.png" alt="steps">
-                            <div class="steps">
-                                <span>01</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h5 class="title">Research & Analysis</h5>
-                        </div>
-                    </div>
-                    <!-- single solari steps area end -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12">
-                    <!-- single solari steps area staert -->
-                    <div class="single-solari-steps-start">
-                        <div class="thumbnail">
-                            <img src="assets/images/steps/03.png" alt="steps">
-                            <div class="steps">
-                                <span>03</span>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <h5 class="title">Installation amp Maintenance</h5>
-                        </div>
-                    </div>
-                    <!-- single solari steps area end -->
                 </div>
             </div>
         </div>
     </div>
-    <!-- our working proces area end -->
+    <!-- rts-case studyes ends -->
