--- a/pages/services.njk
+++ b/pages/services.njk
@@ -1,11 +1,13 @@
 ---
-layout: layouts/inner-page.njk
+layout: layouts/page.njk
 title: Services
 metaDescription: Professional solar energy services including installation, maintenance, and consultancy.
 section: services
 date: 2018-01-01
-permalink: /services/index.html
+permalink: /services/
 eleventyNavigation:
   key: Services
   order: 3
 ---
+
+{% include "components/pages/services/index.njk" %}
