--- a/pages/strategy.njk
+++ b/pages/strategy.njk
@@ -1,9 +1,11 @@
 ---
-layout: layouts/inner-page.njk
+layout: layouts/page.njk
 title: Strategy
+section: advantage
 metaDescription: Our comprehensive approach to solar energy solutions and implementation strategies.
 permalink: /strategy/index.html
 eleventyNavigation:
   key: Strategy
   order: 4
 ---
+{% include "components/pages/strategy/index.njk" %}
