--- a/_includes/components/header.njk
+++ b/_includes/components/header.njk
@@ -13,7 +13,7 @@
                             </div>
                             <div class="inf">
                                 <i class="fa-regular fa-envelope"></i>
-                                <a href="tel:+4733378901">info@drill-solar.com</a>
+                                <a href="tel:+4733378901">info@zeronetcleanenergy.com</a>
                             </div>
                         </div>
                         <div class="right">
@@ -40,7 +40,7 @@
                 <div class="col-lg-12">
                     <div class="main-haeder-wrapper-h2">
                         <a href="/" class="logo-area">
-                            <img src="/assets/images/logo/logo-01.svg" alt="logo">
+                            <img src="/assets/images/logo/logo-01.png" alt="logo">
                         </a>
 
                         <div class="header-nav main-nav-one">
@@ -57,11 +57,6 @@
                         </div>
 
                         <div class="actions-area">
-                            <div class="search-btn" id="search">
-                                <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M15.75 14.7188C16.0625 15.0312 16.0625 15.5 15.75 15.7812C15.625 15.9375 15.4375 16 15.25 16C15.0312 16 14.8438 15.9375 14.6875 15.7812L10.5 11.5938C9.375 12.5 7.96875 13 6.46875 13C2.90625 13 0 10.0938 0 6.5C0 2.9375 2.875 0 6.46875 0C10.0312 0 12.9688 2.9375 12.9688 6.5C12.9688 8.03125 12.4688 9.4375 11.5625 10.5312L15.75 14.7188ZM1.5 6.5C1.5 9.28125 3.71875 11.5 6.5 11.5C9.25 11.5 11.5 9.28125 11.5 6.5C11.5 3.75 9.25 1.5 6.5 1.5C3.71875 1.5 1.5 3.75 1.5 6.5Z" fill="#4AAB3D"/>
-                                </svg>
-                            </div>
                             <div class="menu-btn" id="menu-btn">
                                 <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <rect y="14" width="20" height="2" fill="#4AAB3D"/>
@@ -69,7 +64,7 @@
                                     <rect width="20" height="2" fill="#4AAB3D"/>
                                 </svg>
                             </div>
-                            <a href="tel:+4733378901" class="rts-btn btn-primary">Call for help: 682-3386-69862</a>
+                            <a href="/appointments" class="rts-btn btn-primary">Request an Appointment</a>
                         </div>
                     </div>
                 </div>
