--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -1,7 +1,31 @@
 ---
 layout: layouts/base.njk
-section: page
+section: {{ title }}
 ---
-<h1>{{ title }}</h1>
+
+<!-- Header style two -->
+<!-- RTS Breadcrumb Area -->
+<div class="rts-bread-crumb-area bg_image bg-breadcrumb">
+  <div class="container ptb--65">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="con-tent-main">
+          <div class="wrapper">
+            <span class="bg-text-stok">{{ section }}</span>
+            <div class="title skew-up">
+              <a href="#">{{ title }}</a>
+            </div>
+            <div class="slug skew-up">
+              <a href="/">HOME /</a>
+              <a class="active" href="#">{{ title }}</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- RTS Breadcrumb Area End -->
+<!-- Header style two End -->
 
 {{ layoutContent | safe }}
