--- a/_includes/layouts/service-details.njk
+++ b/_includes/layouts/service-details.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/page.njk
-section: "service-details"
+section: service-details
 ---
 <!-- rts service details area start -->
 <div class="rts-service-details-area rts-section-gap">
