--- a/_includes/components/pages/services/index.njk
+++ b/_includes/components/pages/services/index.njk
@@ -2,7 +2,7 @@
 <div class="rts-project-page-project rts-section-gap">
     <div class="container">
         <div class="row g-24">
-            {% for service in services %}
+            {% for service in services.services %}
             <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                 <div class="project-one-wrapper">
                     <div class="shape">
