--- a/_includes/layouts/service-details.njk
+++ b/_includes/layouts/service-details.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/page.njk
-section: service-details
+section: details
 ---
 <!-- rts service details area start -->
 <div class="rts-service-details-area rts-section-gap">
@@ -63,7 +63,7 @@ section: service-details
             </div>
 
             <div class="col-xl-4 col-md-12 col-sm-12 col-12">
-                <!-- Search Widget -->
+                <!-- Search Widget
                 <div class="rts-single-wized search">
                     <div class="wized-body mt--0">
                         <div class="rts-search-wrapper">
@@ -72,7 +72,7 @@ section: service-details
                         </div>
                     </div>
                 </div>
-
+-->
                 <!-- Services Widget -->
                 <div class="rts-single-wized Categories">
                     <div class="wized-header">
