--- a/_includes/components/pages/home/banner.njk
+++ b/_includes/components/pages/home/banner.njk
@@ -1,32 +1,34 @@
-    <!-- banner two swiper start -->
-    <div class="banner-two-swiper-start">
-        <div class="swiper mySwiper-banner-2">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <!-- single swiper style -->
-                    <div class="banner-two-main-wrapper-solaric">
-                        <span class="water-text images">Wind</span>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="banner-solari-2-content ptb--200 ptb_sm--130">
-                                        <span class="pre"> <span>Welcome</span> To Solari</span>
-                                        <h1 class="banner-title">
-                                            Harnessing the Wind and Sun for Future
-                                        </h1>
-                                        <p class="disc">In a world where renewable resources have become paramount <br> we believe in the boundless power of nature to shape.</p>
-                                        <div class="button-solari-banner-area">
-                                            <a href="aboutus.html" class="rts-btn btn-primary">Learn More</a>
-                                            <div class="vedio-icone">
-                                                <a class="video-play-button play-video" href="#">
-                                                    <span></span>
-                                                    <p class="text">
-                                                        Intro Video
-                                                    </p>
-                                                </a>
-                                                <div class="video-overlay">
-                                                    <a class="video-overlay-close">×</a>
-                                                </div>
+<!-- banner two swiper start -->
+<div class="banner-two-swiper-start">
+    <div class="swiper mySwiper-banner-2">
+        <div class="swiper-wrapper">
+            {% for slide in bannerSection.slides %}
+            <div class="swiper-slide">
+                <div class="banner-two-main-wrapper-solaric{% if loop.index == 2 %} two{% elif loop.index == 3 %} three{% endif %}">
+                    <span class="water-text images">Wind</span>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="banner-solari-2-content ptb--200 ptb_sm--130">
+                                    <span class="pre">
+                                        <span>{{ slide.preTitle }}</span>
+                                        {{ slide.preHighlight }}
+                                    </span>
+                                    <h1 class="banner-title">
+                                        {{ slide.title }}
+                                    </h1>
+                                    <p class="disc">{{ slide.description }}</p>
+                                    <div class="button-solari-banner-area">
+                                        <a href="{{ bannerSection.cta.url }}" class="rts-btn btn-primary">{{ bannerSection.cta.label }}</a>
+                                        <div class="vedio-icone">
+                                            <a class="video-play-button play-video" href="{{ bannerSection.videoButton.url }}">
+                                                <span></span>
+                                                <p class="text">
+                                                    {{ bannerSection.videoButton.label }}
+                                                </p>
+                                            </a>
+                                            <div class="video-overlay">
+                                                <a class="video-overlay-close">×</a>
                                             </div>
                                         </div>
                                     </div>
@@ -34,81 +36,11 @@
                             </div>
                         </div>
                     </div>
-                    <!-- single swiper style end -->
                 </div>
-                <div class="swiper-slide">
-                    <!-- single swiper style -->
-                    <div class="banner-two-main-wrapper-solaric two">
-                        <span class="water-text images">Wind</span>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="banner-solari-2-content ptb--200 ptb_sm--130">
-                                        <span class="pre"> <span>Welcome</span> To Solari</span>
-                                        <h1 class="banner-title">
-                                            Harnessing the Wind and Sun for Future
-                                        </h1>
-                                        <p class="disc">In a world where renewable resources have become paramount <br> we believe in the boundless power of nature to shape.</p>
-                                        <div class="button-solari-banner-area">
-                                            <a href="aboutus.html" class="rts-btn btn-primary">Learn More</a>
-                                            <div class="vedio-icone">
-                                                <a class="video-play-button play-video" href="#">
-                                                    <span></span>
-                                                    <p class="text">
-                                                        Intro Video
-                                                    </p>
-                                                </a>
-                                                <div class="video-overlay">
-                                                    <a class="video-overlay-close">×</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- single swiper style end -->
-                </div>
-                <div class="swiper-slide">
-                    <!-- single swiper style -->
-                    <div class="banner-two-main-wrapper-solaric three">
-                        <span class="water-text images">Wind</span>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="banner-solari-2-content ptb--200 ptb_sm--130">
-                                        <span class="pre"> <span>Welcome</span> To Solari</span>
-                                        <h1 class="banner-title">
-                                            Harnessing the Wind and Sun for Future
-                                        </h1>
-                                        <p class="disc">In a world where renewable resources have become paramount <br> we believe in the boundless power of nature to shape.</p>
-                                        <div class="button-solari-banner-area">
-                                            <a href="aboutus.html" class="rts-btn btn-primary">Learn More</a>
-                                            <div class="vedio-icone">
-                                                <a class="video-play-button play-video" href="#">
-                                                    <span></span>
-                                                    <p class="text">
-                                                        Intro Video
-                                                    </p>
-                                                </a>
-                                                <div class="video-overlay">
-                                                    <a class="video-overlay-close">×</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- single swiper style end -->
-                </div>
-
             </div>
-            <div class="swiper-pagination-b2"></div>
-            <!-- <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div> -->
+            {% endfor %}
         </div>
+        <div class="swiper-pagination-b2"></div>
     </div>
-    <!-- banner two swiper end -->
+</div>
+<!-- banner two swiper end -->
